--- a/public/index.html
+++ b/public/index.html
@@ -3,11 +3,11 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>chat app by Michał Wanta</title>
+    <title>czat by Michał Wanta</title>
 </head>
 
 <body>
     <div id="app"></div>
 </body>
-
+<script type="text/javascript" src="app.bundle.js"></script>
 </html>
